@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp-server.c,v 1.63 2006/07/17 01:31:09 stevesk Exp $ */
+/* $OpenBSD: sftp-server.c,v 1.64 2006/07/22 19:08:54 stevesk Exp $ */
 /*
  * Copyright (c) 2000-2004 Markus Friedl.  All rights reserved.
  *
@@ -24,6 +24,7 @@
 #include <fcntl.h>
 #include <pwd.h>
 #include <unistd.h>
+#include <time.h>
 
 #include "buffer.h"
 #include "bufaux.h"
